# recipes

./: AGENTS.md  README.md  pyproject.toml
app/: main.py
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  author.py  cookbook.py  ingredient.py  measurement.py  preparation.py  recipe.py  user.py
backend/app/routers/: authors.py  cookbooks.py  ingredient.py  ingredients.py  measurements.py  preparations.py
backend/app/schemas/: author.py  cookbook.py  ingredient.py  measurement.py  preparation.py  recipes.py  user.py
backend/app/services/: authors.py  cookbooks.py  ingredient.py  measurements.py  preparations.py  recipes.py
frontend/: index.html  package-lock.json  package.json
